syntax = "proto3";
option csharp_namespace = "PlcCreatorSystem.Generator";

service GeneratorService {
  rpc UploadCsvStream (stream UploadChunk) returns (UploadReply);
}

message UploadChunk {
  string file_name = 1;
  bytes  data      = 2;
  string folder    = 3;
}

message UploadReply {
  bool   ok    = 1;
  string msg   = 2;
  string jobId = 3;
}